--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ main {
   --secondary: #f3a847;
   --tertiary: #b12704;
   --light: #fafafa;
-  --dark: pink;
+  --dark: #51A49A;
   --darker: #111111;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
