added a Gallery component, need to display a list of pictures

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@ main {
   --primary: #8c54ff;
   --secondary: #f3a847;
   --tertiary: #b12704;
-  --light: #fafafa;
-  --dark: #51A49A;
+  --light: #111111;
+  --dark: #fafafa;
   --darker: #111111;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
@@ -95,10 +95,6 @@ header {
 
 header a {
   color: var(--light);
-}
-
-#about {
-  text-align: center;
 }
 
 button {
